# cargo-single

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: main.rs
